[package]
name = "calculator"
version = "0.1.0"
authors = ["rowans329 <47760663+rowans329@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
dialoguer = "0.8.0"
regex = "1.5.4"
